go live, missing animations

--- a/about-us.html
+++ b/about-us.html
@@ -36,31 +36,43 @@
                 <div class="card-container">
                     <div class="card">
                         <img class="profile-photo" src="/assets/images/Equipo KEF/CamilaH.jpeg">
-                        <h3>Maria Camila Hernández Ceballos - <a class="role-title">Cofundadora de KEF - Coordinadora de Formación y Acción Educativa</a></h3>
-                        <p>Docente, investigadora y activista caleña, con más de 6 años de experiencia trabajando en la agenda de género y feminismos en Cali - Colombia. Ha sido consultora de proyectos de investigación e intervención social en prevención a violencias de género, trabajo del cuidado, educación sexual y diversidades. Desde 2020, ha liderado el proyecto Be Feminist Colombia, iniciativa dedicada a la protección de los derechos de las mujeres.</p>
+                        <div class="about-us-card-text">
+                            <h3>Maria Camila Hernández Ceballos - <a class="role-title">Cofundadora de KEF - Coordinadora de Formación y Acción Educativa</a></h3>
+                            <p>Docente, investigadora y activista caleña, con más de 6 años de experiencia trabajando en la agenda de género y feminismos en Cali - Colombia. Ha sido consultora de proyectos de investigación e intervención social en prevención a violencias de género, trabajo del cuidado, educación sexual y diversidades. Desde 2020, ha liderado el proyecto Be Feminist Colombia, iniciativa dedicada a la protección de los derechos de las mujeres.</p>
+                        </div>
                     </div>
-                    <div class="card">
+                    <div class="card typetwo">
                         <img class="profile-photo" src="/assets/images/Equipo KEF/Alejandra.jpeg">
-                        <h3>Maria Alejandra Hernández Ceballos - <a class="role-title">Cofundadora de KEF - Coordinadora de Emprendimientos Ecofeministas</a></h3>
-                        <p>Economista y negociadora internacional caleña, con más de cinco años de experiencia en gestión administrativa, comercial y atención al cliente. Activista apasionada por el medio ambiente y el trabajo comunitario, ha liderado proyectos de responsabilidad social y planeación estratégica, enfocándose en la economía circular y el consumo responsable como fundadora de Komoniu. Destaca por su liderazgo, adaptabilidad,  habilidades en comunicación y trabajo en equipo, aportando soluciones innovadoras en entornos comerciales y sociales.</p>
+                        <div class="about-us-card-text">
+                            <h3>Maria Alejandra Hernández Ceballos - <a class="role-title">Cofundadora de KEF - Coordinadora de Emprendimientos Ecofeministas</a></h3>
+                            <p>Economista y negociadora internacional caleña, con más de cinco años de experiencia en gestión administrativa, comercial y atención al cliente. Activista apasionada por el medio ambiente y el trabajo comunitario, ha liderado proyectos de responsabilidad social y planeación estratégica, enfocándose en la economía circular y el consumo responsable como fundadora de Komoniu. Destaca por su liderazgo, adaptabilidad,  habilidades en comunicación y trabajo en equipo, aportando soluciones innovadoras en entornos comerciales y sociales.</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img class="profile-photo" src="/assets/images/Equipo KEF/Tatiana.jpeg">
-                        <h3>Tatiana Rosero González - <a class="role-title">Coordinadora de Activismo y Desarrollo Comunitario</a></h3>
-                        <p>Profesional en Estudios Políticos y Resolución de Conflictos de la Universidad del Valle, con experiencia en el diseño y formulación de políticas públicas en el sector público, privado y en ONG. Ha trabajado con diversos grupos poblacionales en estrategias de participación ciudadana, control social e incidencia política. Se ha desempeñado en la formulación de Planes Integrales de Seguridad y Convivencia, así como en proyectos de prevención de violencias basadas en género en el sector de la seguridad. Actualmente, es parte de Amassuru, Red de Mujeres en Seguridad y Defensa LATAM.</p>
+                        <div class="about-us-card-text">
+                            <h3>Tatiana Rosero González - <a class="role-title">Coordinadora de Activismo y Desarrollo Comunitario</a></h3>
+                            <p>Profesional en Estudios Políticos y Resolución de Conflictos de la Universidad del Valle, con experiencia en el diseño y formulación de políticas públicas en el sector público, privado y en ONG. Ha trabajado con diversos grupos poblacionales en estrategias de participación ciudadana, control social e incidencia política. Se ha desempeñado en la formulación de Planes Integrales de Seguridad y Convivencia, así como en proyectos de prevención de violencias basadas en género en el sector de la seguridad. Actualmente, es parte de Amassuru, Red de Mujeres en Seguridad y Defensa LATAM.</p>
+                        </div>
                     </div>
-                    <div class="card">
+                    <div class="card typetwo">
                         <img class="profile-photo" src="/assets/images/Equipo KEF/CamilaO.jpeg">
-                        <h3>Maria Camila Ordóñez - <a class="role-title">Equipo de Comunicación y Presencia Digital</a></h3>
-                        <p>Abogada, comunicadora e investigadora interesada en el uso del derecho como herramienta de transformación social. Ha participado en espacios académicos y de activismo en defensa de la autonomía sexual y reproductiva en Cali, Colombia. Ha colaborado en investigaciones con el Observatorio para la Equidad de las Mujeres (OEM) y el Grupo de Acciones Públicas de la Universidad ICESI (GAPI), contribuyendo al análisis y la incidencia en temas de género y derechos humanos.</p>
+                        <div class="about-us-card-text">
+                            <h3>Maria Camila Ordóñez - <a class="role-title">Equipo de Comunicación y Presencia Digital</a></h3>
+                            <p>Abogada, comunicadora e investigadora interesada en el uso del derecho como herramienta de transformación social. Ha participado en espacios académicos y de activismo en defensa de la autonomía sexual y reproductiva en Cali, Colombia. Ha colaborado en investigaciones con el Observatorio para la Equidad de las Mujeres (OEM) y el Grupo de Acciones Públicas de la Universidad ICESI (GAPI), contribuyendo al análisis y la incidencia en temas de género y derechos humanos.</p>
+                        </div>
                     </div> 
                     <div class="card">
-                        <h3>Julian Amaya López - <a class="role-title">Equipo de Marketing y Diseño</a></h3>
-                        <p>Colombiano de nacimiento, Caleño de corazón y Español por amor. Estudió  marketing en Brighton, UK, donde diseñó el logo ganador de Brighton and Hove City in Bloom, premiado por el alcalde. Una persona que convierte ideas en planes, planes en acciones y acciones en resultados. En KEF, es quien que llega con ideas frescas, estructura los procesos y encuentra la forma de que todo fluya. Porque el marketing no es solo contar cosas bonitas: es hacer que pasen.</p>
+                        <div class="about-us-card-text">
+                            <h3>Julian Amaya López - <a class="role-title">Equipo de Marketing y Diseño</a></h3>
+                            <p>Colombiano de nacimiento, Caleño de corazón y Español por amor. Estudió  marketing en Brighton, UK, donde diseñó el logo ganador de Brighton and Hove City in Bloom, premiado por el alcalde. Una persona que convierte ideas en planes, planes en acciones y acciones en resultados. En KEF, es quien que llega con ideas frescas, estructura los procesos y encuentra la forma de que todo fluya. Porque el marketing no es solo contar cosas bonitas: es hacer que pasen.</p>
+                        </div>
                     </div>
-                    <div class="card">
+                    <div class="card typetwo">
+                        <div class="about-us-card-text">
                         <h3>Javier Núñez Jaimes - <a class="role-title">Equipo de Comunicación y Presencia Digital</a></h3>
                         <p>Economista, desarrollador full stack y analista en ciberseguridad caleño, con más de ocho años de experiencia en el diseño e implementación de políticas públicas anticorrupción con enfoque en tecnologías de la información. Es cofundador y presidente de SoonTech, una consultora tecnológica canadiense con sede en Vancouver, y también es el desarrollador líder en KEF. Su labor está enfocada en diseñar y construir productos digitales que fortalezcan la comunidad y su impacto.</p>
+                        </div>
                     </div>
                 </div>
             </container>
