--- a/consumo.html
+++ b/consumo.html
@@ -35,21 +35,22 @@
             <div class="logo"><img src="/assets/LogosAliadas/Logo Tropico Negro.png" alt="Logo 13"></div>
             <div class="logo"><img src="/assets/LogosAliadas/LOGOS ARHUACA_page-0001.jpg" alt="Logo 14"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo Mi Cuerpo Min Krop.jpeg" alt="Logo 15"></div>
-        </div>    
-        <h1>¿Qué significa ser un emprendimiento aliado KEF?</h1>
-        <p>
-        ✨ Estar liderado y/o creado por mujeres colombianas.<br><br>
-        ✨ Los productos son elaborados a pequeña escala y mediante procesos artesanales.<br><br>
-        ✨ Cada producto tiene un propósito transformador —social, ambiental y/o de género—.
-        </p>
+        </div>
     </div>
     <!-- Blog CTA -->
-    <section class="blog-cta">
+    <section class="blog-cta colaboracion">    
+        <h1>¿Qué significa ser un emprendimiento aliado KEF?</h1>
+        <p>
+        <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Estar liderado y/o creado por mujeres colombianas.<br><br>
+        <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Los productos son elaborados a pequeña escala y mediante procesos artesanales.<br><br>
+        <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito transformador —social, ambiental y/o de género—.
+        </p>
         <h2>¡Estas a punto de convertirte en una aliada KEF!</h2>
-        <p>Unirte a KEF como aliada es más que una colaboración: es un acto de confianza mutua, de construcción colectiva y de apuesta por un mundo más justo y amigable.</p>
         <a href="https://wa.me/message/IZQYCEJ6KJ4BN1" class="cta-button-consumo">Hazte aliada</a>
     </section>
-    
+    <section class="blog-cta">
+        <a href="https://www.instagram.com/tienda_kef/" class="cta-button-consumo">Visita nuestra Tienda KEF</a>
+    </section>
     <!-- Footer Section -->
     <div id="footer-placeholder"></div>
 </body>
