--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="main-hero-content">
                         <div class="main-hero-text">
                             <h1>BIENVENIDXS A KEF</h1>
-                            <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica.<br><br></p>
+                            <p>Somos una comunidad ecofeminista (KEF) que impulsa la equidad de género y la justicia ambiental en Cali y el pacífico Colombiano.<br><br></p>
                         </div>
                         <section class="full-section-wrapper main-hero-image" id="hero-image" z-index="20">
                         <!-- Bottom: Image or Design -->
@@ -77,7 +77,7 @@
             <div class="full-section cards-full">
                 <div class="text-cards">
                     <h2> Compromiso KEF </h2>
-                    <p>En KEF trabajamos para construir un mundo más justo desde el ecofeminismo. Nuestra apuesta se basa en educación, activismo y colaboración, tres pilares que nos permiten transformar realidades desde lo colectivo.</p>
+                    <p>En KEF trabajamos para construir un mundo más justo desde el ecofeminismo. Nuestra apuesta se basa en formación, activismo y colaboración, tres pilares que nos permiten transformar realidades desde lo colectivo.</p>
                 </div>
                 <!-- Carousel Section -->
                 <div class="card-container landing">
@@ -86,7 +86,7 @@
                         <a href="activismo.html">
                         <div class="card activismo">
                             <h3>Activismo</h3>
-                            <p>Hacemos ruido y nos movilizamos para defender nuestras causas. Participamos en marchas, intervenciones urbanas, acciones simbólicas y campañas de sensibilización que generan impacto y visibilizan la lucha por los derechos de las mujeres y el medio ambiente.</p>
+                            <p>Hacemos ruido y nos movilizamos para defender nuestras causas. Participamos en marchas, intervenciones urbanas, acciones simbólicas y campañas de sensibilización que visibilizan e inciden en la lucha por los derechos de las mujeres y el medio ambiente.</p>
                         </div>
                         </a>
                     </section>
@@ -95,7 +95,7 @@
                         <a href="formacion.html">
                         <div class="card formacion">
                             <h3>Formación</h3>
-                            <p>Creemos que el conocimiento es poder, por eso organizamos talleres, charlas, encuentros y espacios de aprendizaje sobre equidad de género, justicia ambiental, sostenibilidad y economía circular. Queremos que más personas se sumen a esta conversación y se sientan parte del cambio.</p>
+                            <p>Creemos que el conocimiento es poder, por eso diseñamos, desarrollamos y promovemos talleres, charlas, encuentros y espacios de aprendizaje sobre equidad de género, justicia ambiental, sostenibilidad y economía circular. Queremos que más personas se sumen a esta conversación y se sientan parte del cambio.</p>
                         </div>
                         </a>
                     </section>
@@ -107,6 +107,8 @@
                     </div>
                     </a>
                 </div>
+            </div>
+            <div class="full-section cards-full-cta">
                 <div class="cta-cards">
                     <p>Juntas, hacemos que las cosas pasen.</p> 
                     <p><a href="sumate.html">¡Súmate a KEF y hagamos historia!</a></p>
@@ -114,7 +116,40 @@
                 <div>
                     <img src="assets/8M-2025.jpeg" alt="KEF Team Image">
                 </div>
-
+            </div>
+            <div class="full-section tienda-kef-full">
+                <!-- Apoyanos Section -->
+                <div class="tienda-kef-section">
+                    <!-- Right Side: Text and CTA -->
+                    <div class="tienda-kef-text">
+                        <h2>Apóyanos</h2>
+                        <p>No hay nada más enriquecedor que construir en colectivo y de la mano de mujeres poderosas. Por ello, en KEF tienda visibilizamos y promovemos emprendimientos de mujeres colombianas que le apuestan a producir a pequeña escala, con métodos artesanales y con un propósito social, ambiental y de género.</p>
+                        <p>Adquiere los productos KEF en nuestro punto físico o tienda virtual.</p>
+                        <a href="/contact-us.html" class="cta-button">TIENDA KEF</a>
+                    </div>
+                </div>
+            </div>
+                <!-- Banner 1: Before Conocenos (FF8080) -->
+                <div class="moving-banner" style="background-color: rgb(167, 187, 64)">
+                    <div class="banner-text">
+                        <ul>
+                            <li>AMIGAS</li>
+                            <li>HERMANAS</li>
+                            <li>HIJAS</li>
+                            <li>PARCERAS</li>
+                            <li>CONOCE KEF</li>
+                            <li>MADRES</li>
+                            <li>ALIADAS</li>
+                            <li>AMIGAS</li>
+                            <li>HERMANAS</li>
+                            <li>HIJAS</li>
+                            <li>PARCERAS</li>
+                            <li>CONOCE KEF</li>
+                            <li>MADRES</li>
+                            <li>ALIADAS</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <!-- Know Us Full Section -->
             <div class="full-section conocenos-full">
@@ -129,7 +164,7 @@
                     </div>
                 </div>
                     <!--Banner 2: After Carousel (D9A9FB) -->
-                    <div class="moving-banner" style="background-color: rgb(167, 187, 64);">
+                    <div class="moving-banner" style="background-color:#8E44AD;">
                         <div class="banner-text-b">
                             <ul>
                                 <li>AMIGAS</li>
