fixes post go-live

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section class="full-section-wrapper" z-index="30">
             <!-- Cards Full Section -->
             <div class="full-section cards-full">
-                <div class="text-cards">
+                <div class="text-cards-landing">
                     <h2> Compromiso KEF </h2>
                     <p>En KEF trabajamos para construir un mundo más justo desde el ecofeminismo. Nuestra apuesta se basa en formación, activismo y colaboración, tres pilares que nos permiten transformar realidades desde lo colectivo.</p>
                 </div>
