arreglos sin animacion ni cors resueltos

--- a/about-us.html
+++ b/about-us.html
@@ -32,8 +32,8 @@
             <container class="about-text">
                 <h2>Nuestra misión </h2>
                 <p>Queremos cambiar las reglas del juego: reducir las desigualdades de género y construir más justicia ambiental en Cali y el Pacífico Colombiano.<br><br>¿Cómo? Creando una comunidad ecofeminista consciente, solidaria y llena de acción, donde la vida siempre esté en el centro.</p>
+                <div class="card-container">               
                 <h2>Nuestro Equipo</h2>
-                <div class="card-container">
                     <div class="card">
                         <img class="profile-photo" src="/assets/images/Equipo KEF/CamilaH.jpeg">
                         <div class="about-us-card-text">
@@ -42,14 +42,14 @@
                         </div>
                     </div>
                     <div class="card typetwo">
-                        <img class="profile-photo" src="/assets/images/Equipo KEF/Alejandra.jpeg">
+                        <img class="profile-photo alejandra" src="/assets/images/Equipo KEF/Alejandra.jpeg">
                         <div class="about-us-card-text">
                             <h3>Maria Alejandra Hernández Ceballos - <a class="role-title">Cofundadora de KEF - Coordinadora de Emprendimientos Ecofeministas</a></h3>
                             <p>Economista y negociadora internacional caleña, con más de cinco años de experiencia en gestión administrativa, comercial y atención al cliente. Activista apasionada por el medio ambiente y el trabajo comunitario, ha liderado proyectos de responsabilidad social y planeación estratégica, enfocándose en la economía circular y el consumo responsable como fundadora de Komoniu. Destaca por su liderazgo, adaptabilidad,  habilidades en comunicación y trabajo en equipo, aportando soluciones innovadoras en entornos comerciales y sociales.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img class="profile-photo" src="/assets/images/Equipo KEF/Tatiana.jpeg">
+                        <img class="profile-photo tatiana" src="/assets/images/Equipo KEF/Tatiana.jpeg">
                         <div class="about-us-card-text">
                             <h3>Tatiana Rosero González - <a class="role-title">Coordinadora de Activismo y Desarrollo Comunitario</a></h3>
                             <p>Profesional en Estudios Políticos y Resolución de Conflictos de la Universidad del Valle, con experiencia en el diseño y formulación de políticas públicas en el sector público, privado y en ONG. Ha trabajado con diversos grupos poblacionales en estrategias de participación ciudadana, control social e incidencia política. Se ha desempeñado en la formulación de Planes Integrales de Seguridad y Convivencia, así como en proyectos de prevención de violencias basadas en género en el sector de la seguridad. Actualmente, es parte de Amassuru, Red de Mujeres en Seguridad y Defensa LATAM.</p>
