--- a/consumo.html
+++ b/consumo.html
@@ -38,16 +38,24 @@
         </div>
     </div>
     <!-- Blog CTA -->
-    <section class="blog-cta colaboracion">    
-        <h1>¿Qué significa ser un emprendimiento aliado KEF?</h1>
-        <p>
-        <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Estar liderado y/o creado por mujeres colombianas.<br><br>
-        <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Los productos son elaborados a pequeña escala y mediante procesos artesanales.<br><br>
-        <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito transformador —social, ambiental y/o de género—.
-        </p>
-        <h2>¡Estas a punto de convertirte en una aliada KEF!</h2>
-        <a href="https://wa.me/message/IZQYCEJ6KJ4BN1" class="cta-button-consumo">Hazte aliada</a>
-    </section>
+    <div class="colaboracion-cta-container">
+        <div class="colaboracion-cta-image">
+            <img href="/assets/images/Biofest2025/BF25.jpg">
+        </div>
+        <div class="colaboracion-cta-card">
+            <section class="blog-cta colaboracion">    
+                <h1>¿Qué significa ser un emprendimiento aliado KEF?</h1>
+                <p>
+                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Estar liderado y/o creado por mujeres colombianas.<br><br>
+                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Los productos son elaborados a pequeña escala y mediante procesos artesanales.<br><br>
+                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito transformador —social, ambiental y/o de género—.
+                </p>
+                <h2>¡Estas a punto de convertirte en una aliada KEF!</h2>
+                <a href="https://wa.me/message/IZQYCEJ6KJ4BN1" class="cta-button-consumo">Hazte aliada</a>
+            </section>
+        </div>
+    </div>
+    
     <section class="blog-cta">
         <a href="https://www.instagram.com/tienda_kef/" class="cta-button-consumo">Visita nuestra Tienda KEF</a>
     </section>
