--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
     <nav class="navbar">
         <a href="index.html">
-            <img src="assets/KEF-LOGO.svg" alt="KEF Logo" class="logo">
+            <img src="assets/KEF-LOGO.png" alt="KEF Logo" class="logo">
         </a>
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="hamburger-menu">
