--- a/sumate.html
+++ b/sumate.html
@@ -15,7 +15,6 @@
     <!-- Hero Section -->
     <section class="hero-sumate">
         <h1>Súmate a nuestra comunidad</h1>
-        <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad. <br>Trabajamos en tres líneas de acción: <a class="enlace-activismo">Activismo</a>, <a class="enlace-formacion">Formación e Intervención</a>, y <a class="enlace-colaboracion">Colaboración</a>.</p>
     </section>
     <!-- Activismo Section -->
     <section class="line-of-work">
@@ -33,12 +32,7 @@
         </div>
     </section>
     <!-- Formación e Intervención Section -->
-    <section class="line-of-work">
-        <container class="about-section">
-            <div class="about-us-image">
-                <img src="/assets/images/VocesValientes/Voces1-2.jpeg">
-            </div>
-        </container>
+    <section class="line-of-work typetwo">
         <div class="line-of-work-card formacion">
             <h2>Formación</h2>
             <p>Formar a la próxima generación de lideresas y realizar intervenciones en comunidades es parte fundamental de nuestra misión. Al unirte, participarás en talleres, capacitaciones, y programas de intervención.</p>
@@ -46,12 +40,17 @@
             <p><strong>Foco principal:</strong> Desarrollar herramientas y estrategias formativas que impulsen la equidad de género y la justicia ambiental.</p>
             <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más sobre Formación</a>
         </div>
+        <container class="about-section">
+            <div class="about-us-image">
+                <img src="/assets/images/VocesValientes/Voces1-2.jpeg">
+            </div>
+        </container>
     </section>
 
     <!-- Consumo Local y Consciente Section -->
     <section class="line-of-work">
         <container class="about-section">
-            <div class="about-us-image">
+            <div class="about-us-image colaboracion">
                 <img src="/assets/images/COP16/PB4.jpeg">
             </div>
         </container>
