--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 <div class="main-hero container">
                     <div class="main-hero-content">
                         <div class="main-hero-text">
-                            <h1>BIENVENIDXS A KEF</h1>
-                            <p>Somos una comunidad ecofeminista (KEF) que impulsa la equidad de género y la justicia ambiental en Cali y el pacífico Colombiano.<br><br></p>
+                            <h1>BIENVENIDXS A <a href="index.html" class="text-kef">KEF</a></h1>
                         </div>
                         <section class="full-section-wrapper main-hero-image" id="hero-image" z-index="20">
                         <!-- Bottom: Image or Design -->
@@ -31,6 +30,7 @@
                             </div>
                         </section>
                         <div class="main-hero-text second-text">
+                            <p>Somos una comunidad ecofeminista (KEF) que impulsa la equidad de género y la justicia ambiental en Cali y el Pacífico Colombiano.</p>
                             <p>Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
                             <div class="main-hero-button-container">
                                 <a class="main-hero-button" href="sumate.html">Súmate</a>
@@ -76,7 +76,7 @@
             <!-- Cards Full Section -->
             <div class="full-section cards-full">
                 <div class="text-cards-landing">
-                    <h2> Compromiso KEF </h2>
+                    <h2> Compromiso <a href="index.html" class="text-kef">KEF</a> </h2>
                     <p>En KEF trabajamos para construir un mundo más justo desde el ecofeminismo. Nuestra apuesta se basa en formación, activismo y colaboración, tres pilares que nos permiten transformar realidades desde lo colectivo.</p>
                 </div>
                 <!-- Carousel Section -->
@@ -103,7 +103,7 @@
                     <a href="consumo.html">
                     <div class="card consumo">
                         <h3>Colaboración</h3>
-                        <p>No estamos solas en esto. Trabajamos de la mano con otras organizaciones y proyectos afines para potenciar nuestro impacto. Creemos en el poder de la comunidad y en que, uniendo fuerzas, podemos lograr grandes cambios.</p>
+                        <p>Trabajamos de la mano con mujeres emprendedoras y proyectos afines para potenciar nuestro impacto. Creemos en el poder de la comunidad y en que, uniendo fuerzas, podemos lograr grandes cambios.</p>
                     </div>
                     </a>
                 </div>
@@ -123,33 +123,12 @@
                     <!-- Right Side: Text and CTA -->
                     <div class="tienda-kef-text">
                         <h2>Apóyanos</h2>
-                        <p>No hay nada más enriquecedor que construir en colectivo y de la mano de mujeres poderosas. Por ello, en KEF tienda visibilizamos y promovemos emprendimientos de mujeres colombianas que le apuestan a producir a pequeña escala, con métodos artesanales y con un propósito social, ambiental y de género.</p>
+                        <p>Nada más enriquecedor que construir en colectivo y de la mano de mujeres poderosas. Por ello, en KEF tienda visibilizamos y promovemos emprendimientos de mujeres colombianas que le apuestan a producir a pequeña escala, con métodos artesanales y con un propósito social, ambiental y de género.</p>
                         <p>Adquiere los productos KEF en nuestro punto físico o tienda virtual.</p>
-                        <a href="/contact-us.html" class="cta-button">TIENDA KEF</a>
+                        <a href="https://www.instagram.com/tienda_kef/" class="cta-button">Tienda KEF</a>
                     </div>
                 </div>
             </div>
-                <!-- Banner 1: Before Conocenos (FF8080) -->
-                <div class="moving-banner" style="background-color: rgb(167, 187, 64)">
-                    <div class="banner-text">
-                        <ul>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <!-- Know Us Full Section -->
             <div class="full-section conocenos-full">
@@ -163,27 +142,6 @@
                         <a href="about-us.html" class="cta-button">Más Info</a>
                     </div>
                 </div>
-                    <!--Banner 2: After Carousel (D9A9FB) -->
-                    <div class="moving-banner" style="background-color:#8E44AD;">
-                        <div class="banner-text-b">
-                            <ul>
-                                <li>AMIGAS</li>
-                                <li>HERMANAS</li>
-                                <li>HIJAS</li>
-                                <li>PARCERAS</li>
-                                <li>CONOCE KEF</li>
-                                <li>MADRES</li>
-                                <li>ALIADAS</li>
-                                <li>AMIGAS</li>
-                                <li>HERMANAS</li>
-                                <li>HIJAS</li>
-                                <li>PARCERAS</li>
-                                <li>CONOCE KEF</li>
-                                <li>MADRES</li>
-                                <li>ALIADAS</li>
-                            </ul>
-                        </div>
-                    </div>
             </div>
             <div class="full-section contactanos-full">
                 <!-- Contactanos Section -->
@@ -197,26 +155,6 @@
                     </div>
                 </div>
                 <!-- Banner 3: After Conocenos (FF8080) -->
-                <div class="moving-banner" style="background-color: rgb(255, 128, 128);">
-                    <div class="banner-text">
-                        <ul>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                            <li>AMIGAS</li>
-                            <li>HERMANAS</li>
-                            <li>HIJAS</li>
-                            <li>PARCERAS</li>
-                            <li>CONOCE KEF</li>
-                            <li>MADRES</li>
-                            <li>ALIADAS</li>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <!-- Footer Section -->
         </section>
