--- a/activismo.html
+++ b/activismo.html
@@ -6,6 +6,7 @@
     <title>Activismo</title>
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
+    <script src="js/eventsData.js"></script>
     <script src="js/carousels.js" defer></script>
 </head>
 <body>
