--- a/activismo.html
+++ b/activismo.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activismo</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="/js/eventsData.js"></script>
-    <script src="/js/includes.js" defer></script>
-    <script src="/js/carousels.js" defer></script>
+    <script src="./js/eventsData.js"></script>
+    <script src="./js/includes.js" defer></script>
+    <script src="./js/carousels.js" defer></script>
 </head>
 <body>
 
