--- a/about-us.html
+++ b/about-us.html
@@ -56,19 +56,19 @@
                         </div>
                     </div>
                     <div class="card typetwo">
-                        <img class="profile-photo" src="/assets/images/Equipo KEF/CamilaO.jpeg">
+                        <img class="profile-photo camilao" src="/assets/images/Equipo KEF/CamilaO.jpeg">
                         <div class="about-us-card-text">
                             <h3>Maria Camila Ordóñez - <a class="role-title">Equipo de Comunicación y Presencia Digital</a></h3>
                             <p>Abogada, comunicadora e investigadora interesada en el uso del derecho como herramienta de transformación social. Ha participado en espacios académicos y de activismo en defensa de la autonomía sexual y reproductiva en Cali, Colombia. Ha colaborado en investigaciones con el Observatorio para la Equidad de las Mujeres (OEM) y el Grupo de Acciones Públicas de la Universidad ICESI (GAPI), contribuyendo al análisis y la incidencia en temas de género y derechos humanos.</p>
                         </div>
                     </div> 
-                    <div class="card">
+                    <div class="card typetwo">
                         <div class="about-us-card-text">
                             <h3>Julian Amaya López - <a class="role-title">Equipo de Marketing y Diseño</a></h3>
                             <p>Colombiano de nacimiento, Caleño de corazón y Español por amor. Estudió  marketing en Brighton, UK, donde diseñó el logo ganador de Brighton and Hove City in Bloom, premiado por el alcalde. Una persona que convierte ideas en planes, planes en acciones y acciones en resultados. En KEF, es quien que llega con ideas frescas, estructura los procesos y encuentra la forma de que todo fluya. Porque el marketing no es solo contar cosas bonitas: es hacer que pasen.</p>
                         </div>
                     </div>
-                    <div class="card typetwo">
+                    <div class="card">
                         <div class="about-us-card-text">
                         <h3>Javier Núñez Jaimes - <a class="role-title">Equipo de Comunicación y Presencia Digital</a></h3>
                         <p>Economista, desarrollador full stack y analista en ciberseguridad caleño, con más de ocho años de experiencia en el diseño e implementación de políticas públicas anticorrupción con enfoque en tecnologías de la información. Es cofundador y presidente de SoonTech, una consultora tecnológica canadiense con sede en Vancouver, y también es el desarrollador líder en KEF. Su labor está enfocada en diseñar y construir productos digitales que fortalezcan la comunidad y su impacto.</p>
