--- a/consumo.html
+++ b/consumo.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumo Local y Consciente</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="js/main.js" defer></script>
     <script src="js/includes.js" defer></script>
 </head>
 <body>
@@ -40,7 +39,7 @@
     <!-- Blog CTA -->
     <div class="colaboracion-cta-container">
         <div class="colaboracion-cta-image">
-            <img href="/assets/images/Biofest2025/BF25.jpg">
+            <img src="assets/images/Biofest2025/BF25.jpg" alt="Biofest2025">
         </div>
         <div class="colaboracion-cta-card">
             <section class="blog-cta colaboracion">    
@@ -48,17 +47,16 @@
                 <p>
                 <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Estar liderado y/o creado por mujeres colombianas.<br><br>
                 <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Los productos son elaborados a pequeña escala y mediante procesos artesanales.<br><br>
-                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito transformador —social, ambiental y/o de género—.
+                <img class="green-leaf-bullet" src="/assets/icons/verde.png"> Cada producto tiene un propósito transformador: social, ambiental y/o de género.
                 </p>
-                <h2>¡Estas a punto de convertirte en una aliada KEF!</h2>
-                <a href="https://wa.me/message/IZQYCEJ6KJ4BN1" class="cta-button-consumo">Hazte aliada</a>
+                <h2 class="title-cta-colaboracion">¡Estas a punto de convertirte en una aliada KEF!</h2>
+                <div class="ctas-colaboracion">
+                    <a href="https://wa.me/message/IZQYCEJ6KJ4BN1" class="cta-button-consumo">Hazte aliada</a>
+                    <a href="https://www.instagram.com/tienda_kef/" class="cta-button-consumo typetwo">Visita nuestra Tienda KEF</a>
+                </div>
             </section>
         </div>
     </div>
-    
-    <section class="blog-cta">
-        <a href="https://www.instagram.com/tienda_kef/" class="cta-button-consumo">Visita nuestra Tienda KEF</a>
-    </section>
     <!-- Footer Section -->
     <div id="footer-placeholder"></div>
 </body>
