--- a/dona.html
+++ b/dona.html
@@ -23,7 +23,7 @@
             <div class="donations-content">
                 <!-- Left Side: Text Content -->
                 <div class="donations-text">
-                    <h2>Productos KEF</h2>
+                    <h2>Productos <a class="text-kef-apoyanos">KEF</a></h2>
                     <p>No hay nada más enriquecedor que construir en colectivo y de la mano de mujeres poderosas.</p>
                     <div class="donations-image">
                         <img src="/assets/images/Equipo KEF/EquipoKEF.jpeg">
