--- a/formacion.html
+++ b/formacion.html
@@ -28,7 +28,7 @@
 
     <!-- Blog CTA -->
     <section class="blog-cta">
-        <a href="blog.html?topic=formacion" class="cta-button-formacion">Saber Más</a>
+        <a href="https://www.instagram.com/comunidad_kef/" class="cta-button-formacion">Saber Más</a>
     </section>
 
     <!-- Footer Section -->
