--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
                 </div>
                 <!-- Carousel Section -->
                 <div class="card-container landing">
-                    <section class="full-section-wrapper" z-index="40">
-                        <!-- Activismo Card -->
+                    <!-- Activismo Card -->
+                    <section class="sliding-card-activismo">
                         <a href="activismo.html">
-                        <div class="card activismo">
-                            <h3>Activismo</h3>
-                            <p>Hacemos ruido y nos movilizamos para defender nuestras causas. Participamos en marchas, intervenciones urbanas, acciones simbólicas y campañas de sensibilización que visibilizan e inciden en la lucha por los derechos de las mujeres y el medio ambiente.</p>
-                        </div>
+                            <div class="card activismo">
+                                <h3>Activismo</h3>
+                                <p>Hacemos ruido y nos movilizamos para defender nuestras causas. Participamos en marchas, intervenciones urbanas, acciones simbólicas y campañas de sensibilización que visibilizan e inciden en la lucha por los derechos de las mujeres y el medio ambiente.</p>
+                            </div>
                         </a>
                     </section>
-                    <section class="full-section-wrapper" z-index="40">
-                        <!-- Formación Card -->
+                    <!-- Formación Card -->
+                    <section class="sliding-card-formacion">
                         <a href="formacion.html">
                         <div class="card formacion">
                             <h3>Formación</h3>
@@ -100,12 +100,14 @@
                         </a>
                     </section>
                     <!-- Consumo Card -->
-                    <a href="consumo.html">
-                    <div class="card consumo">
-                        <h3>Colaboración</h3>
-                        <p>Trabajamos de la mano con mujeres emprendedoras y proyectos afines para potenciar nuestro impacto. Creemos en el poder de la comunidad y en que, uniendo fuerzas, podemos lograr grandes cambios.</p>
-                    </div>
-                    </a>
+                    <section class="sliding-card-consumo">
+                        <a href="consumo.html">
+                        <div class="card consumo">
+                            <h3>Colaboración</h3>
+                            <p>Trabajamos de la mano con mujeres emprendedoras y proyectos afines para potenciar nuestro impacto. Creemos en el poder de la comunidad y en que, uniendo fuerzas, podemos lograr grandes cambios.</p>
+                        </div>
+                        </a>
+                    </section>
                 </div>
             </div>
             <div class="full-section cards-full-cta">
