--- a/sumate.html
+++ b/sumate.html
@@ -17,7 +17,7 @@
         <h1>Súmate a nuestra comunidad</h1>
     </section>
     <!-- Activismo Section -->
-    <section class="line-of-work">
+    <section class="line-of-work activismo">
         <container class="about-section">
             <div class="about-us-image">
                 <img src="/assets/images/8M-2025/8M254.jpg">
@@ -40,7 +40,7 @@
             <p><strong>Foco principal:</strong> Desarrollar herramientas y estrategias formativas que impulsen la equidad de género y la justicia ambiental.</p>
             <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más sobre Formación</a>
         </div>
-        <container class="about-section">
+        <container class="about-section typetwo">
             <div class="about-us-image">
                 <img src="/assets/images/VocesValientes/Voces1-2.jpeg">
             </div>
@@ -56,7 +56,7 @@
         </container>
         <div class="line-of-work-card colaboracion">
             <h2>Colaboración</h2>
-            <p>Apoyar el consumo responsable y sostenible a nivel local es parte de nuestro trabajo.  Si tienes un producto local y/o artesanal que genere un impacto social, ambiental y de género, queremos que hagas parte de nuestras aliadas.  Al unirte, apoyaremos la visibilidad de tus productos y participarás en eventos que promueven prácticas de consumo consciente en la ciudad.</p>
+            <p>Si tienes un producto local y/o artesanal que genere un impacto social, ambiental y de género, queremos que hagas parte de nuestras aliadas.  Al unirte, apoyaremos la visibilidad de tus productos y participarás en eventos que promueven prácticas de consumo consciente en la ciudad.</p>
             <p><strong>Actividades:</strong> Alianzas, estrategias de concientización y ferias locales.</p>
             <p><strong>Foco principal:</strong> Fomentar el consumo local y las prácticas sostenibles que ponen el cuidado de la vida en el centro de todo.</p>
             <a href="consumo.html" class="cta-button" style="background-color: #99CC33;">Más sobre Colaboración</a>
