Segunda entrada agregada

--- a/blog.html
+++ b/blog.html
@@ -57,6 +57,11 @@
                 <p>"Nos seguimos chocando de frente con un muro de gobiernos negacionistas, que se han mostrado poco comprometidos con la causa climática"</p>
                 <p class="meta">Fecha: Abril, 2023 | Tiempo de Lectura: 5 min | Autor(x): María Camila Hernández</p>
             </div>
+            <div class="blog-entry" data-topic="activismo" data-date="2023-10-01" data-comments="30">
+                <h2><a href="/entrada2.html">Hacia un comercio más consciente y justo</a></h2>
+                <p>"Recursos prácticos para fortalecer la gestión de tiendas virtuales, reducir devoluciones y optimizar la experiencia del cliente"</p>
+                <p class="meta">Fecha: Julio, 2025 | Tiempo de Lectura: 8 min | Autor(x): Javier D. Nuñez</p>
+            </div>
             <!-- More blog entries here -->
         </div>
     </section>
