feat: Add clickable call-to-action image and refine layout responsiveness by adjusting margins and padding across various sections.

--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
                 <p>Juntas, hacemos que las cosas pasen.</p>
                 <p><a href="sumate.html">¡Súmate a KEF y hagamos historia!</a></p>
             </div>
-            <div>
-                <img src="assets/8M-2025.jpeg" alt="KEF Team Image">
+            <div class="cta-image">
+                <a href="sumate.html">
+                    <img src="assets/8M-2025.jpeg" alt="KEF Team Image">
+                </a>
             </div>
         </div>
         <div class="full-section tienda-kef-full">
